--- a/CSSTut/Assignment3.css
+++ b/CSSTut/Assignment3.css
@@ -6,12 +6,20 @@ table {
     margin: auto;
 }
 
-h1 {
-    text-align:center;
-}
 
 img {
     width: 30%;
     float: left;
     margin: 1.66%;
+}
+p {
+    float: left;
+    margin-left: 1.66%;
+    font-family: 'Raleway';
+    text-transform: uppercase;  
+    font-weight: 800;
+    font-size: 23px;
+    border-bottom: 2px solid #f1f1f1;
+    width: 30%;
+    padding-bottom: 20px;
 }
